# communication_t2stack

./: BUILD.gn  OAT.xml  README.en.md  README.md  build_t2stack.sh  bundle.json  t2stack.gni  接口说明文档.md
fillp/: BUILD.gn
fillp/include/: fillpcallbacks.h  fillpinc.h  fillptypes.h
fillp/src/app_lib/include/: epoll_app.h  fillp_stack_app_config_in.h  socket_app.h  socket_opt.h  spunge_app.h
fillp/src/app_lib/src/: api.c  epoll_app.c  fillp_stack_app_config.c  fillp_stack_app_config_in.c  socket_app.c  socket_opt.c  spunge_app.c
fillp/src/fillp_lib/include/: fillp_buf_item.h  fillp_cookie.h  fillp_stack_config.h  fillp_stack_config_in.h  hmac.h  net.h  pcb.h  res.h  sha256.h  spunge_core.h  spunge_stack.h  (+1 more)
nstackx_congestion/: BUILD.gn
nstackx_congestion/core/: nstackx_congestion.c
nstackx_congestion/interface/: nstackx_congestion.h
nstackx_congestion/platform/liteos/: sys_congestion.c  sys_congestion.h
nstackx_congestion/platform/unix/: nstackx_nlmsg.h  nstackx_qdisc.h  nstackx_wifi_stat_hook.h  nstackx_wifi_stat_linux.h  sys_congestion.c  sys_congestion.h
nstackx_core/dfile/: BUILD.gn
nstackx_core/dfile/core/: nstackx_dfile.c  nstackx_dfile_config.c  nstackx_dfile_control.c  nstackx_dfile_dfx.c  nstackx_dfile_frame.c  nstackx_dfile_log.c  nstackx_dfile_mp.c  nstackx_dfile_retransmission.c  nstackx_dfile_send.c  nstackx_dfile_session.c  nstackx_dfile_transfer.c  nstackx_file_list.c  nstackx_file_manager.c  nstackx_file_manager_client.c
nstackx_core/dfile/include/: nstackx_dfile_config.h  nstackx_dfile_control.h  nstackx_dfile_dfx.h  nstackx_dfile_frame.h  nstackx_dfile_log.h  nstackx_dfile_mp.h  nstackx_dfile_private.h  nstackx_dfile_retransmission.h  nstackx_dfile_send.h  nstackx_dfile_session.h  nstackx_dfile_transfer.h  nstackx_file_list.h  nstackx_file_manager.h  nstackx_file_manager_client.h
nstackx_core/dfile/interface/: nstackx_dfile.h
nstackx_ctrl/: BUILD.gn
nstackx_ctrl/core/: json_payload.c  nstackx_common.c  nstackx_common_virtual.c  nstackx_device.c  nstackx_device_local.c  nstackx_device_remote.c  nstackx_dfinder_hidump.c  nstackx_dfinder_hievent.c  nstackx_dfinder_log.c  nstackx_dfinder_mgt_msg_log.c  nstackx_inet.c  nstackx_smartgenius.c  nstackx_statistics.c
nstackx_ctrl/core/coap_discover/: coap_app.c  coap_client.c  coap_discover.c
nstackx_ctrl/core/mini_discover/: coap_adapter.c  coap_app.c  coap_discover.c
nstackx_ctrl/include/: json_payload.h  nstackx_common.h  nstackx_device.h  nstackx_device_local.h  nstackx_device_remote.h  nstackx_dfinder_hidump.h  nstackx_dfinder_hievent.h  nstackx_dfinder_log.h  nstackx_dfinder_mgt_msg_log.h  nstackx_inet.h  nstackx_smartgenius.h  nstackx_statistics.h
nstackx_ctrl/include/coap_discover/: coap_app.h  coap_client.h  coap_discover.h
nstackx_ctrl/include/mini_discover/: coap_adapter.h  coap_app.h  coap_def.h  coap_discover.h
nstackx_ctrl/interface/: nstackx.h
nstackx_util/: BUILD.gn
nstackx_util/core/: nstackx_dev.c  nstackx_event.c  nstackx_getopt.c  nstackx_log.c  nstackx_mbedtls.c  nstackx_openssl.c  nstackx_socket.c  nstackx_timer.c  nstackx_util.c
nstackx_util/interface/: nstackx_common_header.h  nstackx_config.h  nstackx_dev.h  nstackx_epoll.h  nstackx_error.h  nstackx_event.h  nstackx_getopt.h  nstackx_list.h  nstackx_log.h  nstackx_mbedtls.h  nstackx_openssl.h  nstackx_socket.h  nstackx_spinlock.h  nstackx_timer.h  nstackx_util.h
nstackx_util/platform/liteos/: sys_common_header.h  sys_dev.c  sys_epoll.c  sys_epoll.h  sys_event.c  sys_log.c  sys_socket.c  sys_timer.c  sys_util.c  sys_util.h
nstackx_util/platform/unix/: sys_common_header.h  sys_dev.c  sys_epoll.c  sys_epoll.h  sys_event.c  sys_event.h  sys_socket.c  sys_timer.c  sys_util.c  sys_util.h
test/: BUILD.gn
test/faucet/: solution.py
test/unittest/: BUILD.gn  test_dfile_gtest.cpp  test_dstream_gtest.cpp
test/unittest/dfinder_gtest/: json_payload_ut.cpp  nstackx_common_ut.cpp  nstackx_device_local_ut.cpp  nstackx_device_remote_ut.cpp  nstackx_dfinder_hidump_ut.cpp  nstackx_dfinder_hievent_ut.cpp
test/unittest/dfinder_gtest/coap_discover/: coap_app_ut.cpp  coap_client_ut.cpp  coap_discover_ut.cpp
test/unittest/dfinder_gtest/util/: ut_utils.cpp  ut_utils.h
(+81 files in other folders)
